add save button to the index apge

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                             type="button">
                         +
                     </button>
+                    <button class="create-form bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                            type="submit">
+                        Save
+                    </button>
                 </div>
             </section>
         </div>
